--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "start:prod": "node scripts/startProd.js",
+    "deploy": "npm-run-all build start:prod",
     "lint": "eslint src/**/*.js"
   },
   "husky": {
@@ -19,13 +20,19 @@
   "lint-staged": {
     "*.js": [
       "npm run lint"
-    ],
-    "*.{js,json,css,md}": [
-      "npm run format",
-      "git add"
     ]
   },
   "dependencies": {
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.0.1",
+    "@loadable/component": "^5.13.1",
+    "@loadable/server": "^5.13.1",
+    "chalk": "^2.4.2",
+    "compression": "^1.7.4",
+    "core-js": "^3.2.1",
+    "dotenv": "^8.1.0",
     "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -34,20 +41,25 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.5.5",
     "@babel/runtime": "^7.5.5",
-    "@loadable/component": "^5.13.1",
-    "@loadable/server": "^5.13.1",
+    "@loadable/babel-plugin": "^5.13.0",
+    "express": "^4.17.1",
+    "fs-extra": "^8.1.0",
+    "helmet": "^3.20.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "morgan": "^1.9.1",
+    "react-ssr-prepass": "^1.0.6"
+  },
+  
+  "devDependencies": {
+    "@loadable/webpack-plugin": "^5.13.0",
     "autoprefixer": "^9.6.1",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-dynamic-import-node": "^2.3.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "chalk": "^2.4.2",
     "chokidar": "^3.0.2",
-    "compression": "^1.7.4",
-    "core-js": "^3.2.1",
     "css-loader": "^3.2.0",
-    "dotenv": "^8.1.0",
     "error-overlay-webpack-plugin": "^0.4.1",
     "eslint": "^6.3.0",
     "eslint-config-react-app": "^5.0.1",
@@ -57,27 +69,17 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
-    "express": "^4.17.1",
-    "fs-extra": "^8.1.0",
-    "helmet": "^3.20.1",
     "husky": "^3.0.5",
     "import-glob-loader": "^1.1.0",
-    "isomorphic-unfetch": "^3.0.0",
     "lint-staged": "^9.2.5",
     "lodash-webpack-plugin": "^0.11.5",
     "mini-css-extract-plugin": "^0.8.0",
-    "morgan": "^1.9.1",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
     "react-dev-utils": "^9.0.3",
-    "react-dom": "^16.9.0",
-    "react-helmet": "^5.2.1",
-    "react-router-dom": "^5.0.1",
-    "react-ssr-prepass": "^1.0.6",
     "react-test-renderer": "^16.9.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
@@ -86,6 +88,7 @@
     "webpack-dev-middleware": "^3.7.1",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "npm-run-all": "^4.1.5"
   }
 }
